default/objects/Trip__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Visit - Design Develop</fullName>
            </value>
            <value>
                <fullName>Customer Visit - Courtesy S&amp;M</fullName>
            </value>
            <value>
                <fullName>Customer Visit - Courtesy MFG</fullName>
            </value>
            <value>
                <fullName>Customer Visit - Courtesy Spare</fullName>
            </value>
            <value>
                <fullName>Customer Visit - Training</fullName>
            </value>
            <value>
                <fullName>FMG</fullName>
            </value>
            <value>
                <fullName>Exhibition Visit</fullName>
            </value>
            <value>
                <fullName>Business Promotion</fullName>
            </value>
            <value>
                <fullName>HO/BO Visit</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Legal Work</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Supplier Visit</fullName>
            </value>
            <value>
                <fullName>Visa Formality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>