default/objects/Trip__c/fields/End_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>End_of_Trip__c</fullName>
    <label>End of Trip</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>