default/objects/Trip__c/fields/SAP_Trip_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Trip_Id__c</fullName>
    <externalId>true</externalId>
    <label>SAP Trip Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>