default/objects/Trip__c/fields/Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trips1</relationshipName>
    <type>Lookup</type>
</CustomField>