default/objects/Trip__c/fields/Start_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Trip__c</fullName>
    <label>Start of Trip</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>