default/objects/Trip__c/fields/X1st_Destination__c.field-meta.xml
<CustomField>
    <fullName>X1st_Destination__c</fullName>
    <label>1st Destination</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>